name:                binance-client
version:             0.1.0.0
synopsis:            Client for Binance REST API for use in Ergvein project
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2021 ATUM SOLUTIONS AG
author:              Levon Oganyan
maintainer:          Levon Oganyan <lemarwin@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Binance.Client
    Binance.Client.Types
  build-depends:
        base                    >= 4.7    && < 4.13
      , aeson                   >= 1.3    && < 1.5
      , lens                    >= 4.17   && < 4.18
      , text                    >= 1.2    && < 1.3
      , wreq                    >= 0.5    && < 0.6
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    QuasiQuotes
    UndecidableInstances

executable binance-cli
  hs-source-dirs:
      app
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -O2 "-with-rtsopts= -N -G1 -I0"
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N -A64m -AL256m -I0 -T"
  build-depends:
      base
    , binance-client
    , text
    , time
