name:                coinbase-client
version:             0.1.0.0
synopsis:            Client for Coinbase REST API for use in Ergvein project
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2021 ATUM SOLUTIONS AG
author:              Levon Oganyan
maintainer:          Levon Oganyan <lemarwin@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Coinbase.Client
  build-depends:
        base                    >= 4.7    && < 4.13
      , lens                    >= 4.17   && < 4.18
      , lens-aeson              >= 1.0    && < 1.1
      , text                    >= 1.2    && < 1.3
      , wreq                    >= 0.5    && < 0.6
      , ergvein-wallet-types
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    QuasiQuotes
    UndecidableInstances
