name:                ergvein-common
version:             1.0.0.0
synopsis:            Helpers for aeson/lens/text for ergvein wallet
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Aeson
    Ergvein.IO
    Ergvein.Text
    Ergvein.Lens
  build-depends:
      base
    , aeson
    , bytestring
    , directory
    , lens
    , template-haskell
    , text
  default-language:    Haskell2010
