name:                ergvein-common
version:             1.0.0.0
synopsis:            Helpers for aeson/lens/text for ergvein wallet
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

library
  Ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Aeson
    Ergvein.Either
    Ergvein.IO
    Ergvein.Lens
    Ergvein.Maybe
    Ergvein.Text
  build-depends:
      base
    , aeson
    , atomic-write
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , directory
    , lens
    , safe
    , template-haskell
    , text
  default-language:    Haskell2010
