name:                ergvein-crypto
version:             0.1.0.0
synopsis:            Cryptographic package for ergvein wallet.
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             See LICENSE in the root of the repository

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Crypto
    Ergvein.Crypto.Keys
  build-depends:
      base                      >= 4.9      && <5
    , text                      >= 1.2      && < 1.3
    , vector                    >= 0.10     && < 0.12.1
    , bytestring                >= 0.10     && < 0.11
    , entropy                   >= 0.3.7    && < 0.4.1.6
    , haskoin-core              >= 0.8.0    && < 0.8.1
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
