name:                ergvein-crypto
version:             0.1.0.0
synopsis:            Cryptographic package for ergvein wallet.
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:
                     - Anton Gushcha
                     - Levon Oganyan
                     - Aminion
                     - Vladimir Krutkin
maintainer:
                     - Anton Gushcha <ncrashed@gmail.com>
                     - Levon Oganyan <lemarwin42@gmail.com>
                     - Aminion <bonumsignum@gmail.com>
                     - Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Crypto
    Ergvein.Crypto.Keys
  build-depends:
      base                      >= 4.9      && <5
    , bytestring                >= 0.10     && < 0.11
    , bytestring-trie           >= 0.2.5    && < 0.3
    , cryptonite                >= 0.25     && < 0.26
    , entropy                   >= 0.3.7    && < 0.4.1.6
    , haskoin-core              >= 0.8.0    && < 0.8.1
    , memory                    >= 0.14.16  && < 0.15.1
    , text                      >= 1.2      && < 1.3
    , vector                    >= 0.10     && < 0.12.1
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
