name:                ergvein-crypto
version:             0.1.0.0
synopsis:            Cryptographic package for ergvein wallet.
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:
                     - Anton Gushcha
                     - Levon Oganyan
                     - Aminion
                     - Vladimir Krutkin
maintainer:
                     - Anton Gushcha <ncrashed@gmail.com>
                     - Levon Oganyan <lemarwin42@gmail.com>
                     - Aminion <bonumsignum@gmail.com>
                     - Vladimir Krutkin <krutkinvs@gmail.com>

library
  Ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Crypto
    Ergvein.Crypto.AES256
    Ergvein.Crypto.ECIES
    Ergvein.Crypto.Hash
    Ergvein.Crypto.Keys
    Ergvein.Crypto.PBKDF
    Ergvein.Crypto.Util
    Ergvein.Crypto.WordLists
  build-depends:
      base                      >= 4.9      && < 5
    , aeson                     >= 1.3      && < 1.5
    , base16-bytestring         >= 0.1      && < 0.2
    , bytestring                >= 0.10     && < 0.11
    , bytestring-trie           >= 0.2.5    && < 0.3
    , cereal                    >= 0.5      && < 0.6
    , cryptonite                >= 0.25     && < 0.26
    , entropy                   >= 0.3.7    && < 0.4.1.6
    , hashable                  >= 1.2.7.0  && < 1.3.0.1
    , haskoin-core              >= 0.12.0   && < 0.12.1
    , memory                    >= 0.14.16  && < 0.15.1
    , secp256k1-haskell         >= 0.2.2    && < 0.2.3
    , string-conversions        >= 0.4.0.1  && <0.4.0.2
    , text                      >= 1.2      && < 1.3
    , vector                    >= 0.10     && < 0.12.1
  default-language:    Haskell2010
  default-extensions:
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables