name:                data-merkle-tree
version:             0.1.0.0
synopsis:            Merkle tree data structure
description:         See README.md
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Data.MerkleTree
  build-depends:
      base        >= 4.7     &&  < 4.13
    , cryptonite
    , cereal
    , memory
    , bytestring
    , random
    , text
    , deepseq
    , utf8-string
    
  default-language:    Haskell2010
  default-extensions:
    StrictData
    RankNTypes
    DeriveGeneric
    DeriveAnyClass
    NamedFieldPuns
    ScopedTypeVariables
    OverloadedStrings
executable benchmark
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options: 
  build-depends:
      base
    , criterion
    , cereal
    , data-merkle-tree

  default-language:    Haskell2010
  default-extensions: