name:                data-merkle-tree
version:             0.1.0.0
synopsis:            Merkle tree data structure
description:         See README.md
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Data.MerkleTree
  build-depends:
      base        >= 4.7     &&  < 4.13
    , bytestring
    , cereal
    , cryptonite
    , deepseq
    , memory
    , random
    , text
    , utf8-string
    
  default-language:    Haskell2010
  default-extensions:
    StrictData
    RankNTypes
    DeriveGeneric
    DeriveAnyClass
    NamedFieldPuns
    ScopedTypeVariables
    OverloadedStrings
executable benchmark
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options: 
  build-depends:
      base
    , criterion
    , cereal
    , data-merkle-tree

  default-language:    Haskell2010
  default-extensions:

test-suite merkle-tree-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Data.Test.MerkleTree
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
  build-depends:
      base
    , data-merkle-tree
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-quickcheck
    , QuickCheck
    , bytestring
    , quickcheck-instances