name:                data-merkle-tree
version:             0.1.0.0
synopsis:            Merkle tree data structure
description:         See README.md
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Data.MerkleTree
  build-depends:
      base         >= 4.7   && < 4.13
    , bytestring   >= 0.10  && < 0.11
    , cereal       >= 0.5   && < 0.6
    , cryptonite   >= 0.25  && < 0.28
    , deepseq      >= 1.4   && < 1.5
    , memory       >= 0.14  && < 0.16
    , text         >= 1.2   && < 1.3
    , utf8-string  >= 1.0   && < 1.1

  default-language:    Haskell2010
  default-extensions:
    StrictData
    RankNTypes
    DeriveGeneric
    DeriveAnyClass
    NamedFieldPuns
    ScopedTypeVariables
    OverloadedStrings
executable benchmark
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options:
  build-depends:
      base
    , cereal
    , criterion

    , data-merkle-tree

  default-language:    Haskell2010
  default-extensions:

test-suite merkle-tree-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Data.Test.MerkleTree
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
  build-depends:
      base
    , QuickCheck            
    , bytestring
    , quickcheck-instances  >= 0.3   && < 0.4
    , tasty                 >= 1.2   && < 1.3
    , tasty-quickcheck      >= 0.10  && < 0.11

    , data-merkle-tree
