name:                ergvein-dns-crawling
version:             0.1.0.0
synopsis:            Ergvein network unified dns node listing
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Aminion <aminion@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.DNS.Constants
    Ergvein.DNS.Crawling

  build-depends:
        base                     >= 4.7     &&  < 4.13,
        text,
        network,
        dns,
        ergvein-common,
        bytestring,
        iproute,
        containers,
        listsafe

  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

test-suite ergvein-dns-crawling-test
  type: exitcode-stdio-1.0
  Default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestMain.hs
  exposed-modules: Test.Generators
  other-modules: Test.Generators
  build-depends:
      base
  default-extensions:
    OverloadedStrings
