name:                ergo-api
version:             0.1.0.0
synopsis:            Provides access to the API of Ergo node
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Network.Ergo.Api.Blocks
    Network.Ergo.Api.Client
    Network.Ergo.Api.Info
    Network.Ergo.Api.Internal
    Network.Ergo.Api.Utxo
  build-depends:
      base                 >= 4.7 && < 4.13
    , aeson                == 1.4.*
    , bytestring           == 0.10.*
    , exceptions           == 0.10.*
    , http-client          == 0.5.*
    , lens                 == 4.17.*
    , mtl                  == 2.2.*
    , string-interpolate  
    , text                 == 1.2.*
    , unliftio-core        == 0.1.*
    , unordered-containers == 0.2.*
    , wreq                 == 0.5.*

    , ergvein-interface-ergo

  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    TypeApplications
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    QuasiQuotes
    DuplicateRecordFields

test-suite test-suite
  type: exitcode-stdio-1.0
  ghc-options: -Wall -ferror-spans -threaded -fprof-auto -fprof-cafs -fno-warn-type-defaults
  default-language: Haskell2010
  hs-source-dirs:
      test
  main-is: Main.hs
  other-modules:
      Network.Ergo.Api.BlocksSpec
      Network.Ergo.Api.BlocksSpec
      Network.Ergo.Api.TestUtil
      Spec
  build-depends:
      base                 >= 4.7 && < 4.13
    , bytestring           == 0.10.*
    , hspec                == 2.7.*
    , lens                 == 4.17.*
    , mtl                  == 2.2.*
    , text                 == 1.2.*
    , unliftio-core        == 0.1.*
    , wreq                 == 0.5.*

    , ergvein-interface-ergo
    , ergo-api