name:                ergo-protocol-client
version:             0.1.0.0
synopsis:            TCP client for P2P protocol of Ergo platform.
description:         See README.md
category:            Data
build-type:          Simple
cabal-version:       >=2.0
license:             MIT
license-file:        LICENSE
copyright:           2020 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan, Sergey Ivanov
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Ergo.Protocol.Client
  default-language:    Haskell2010
  build-depends:
      base              >= 4.7 && < 4.13
    , bytestring        >= 0.9 && < 0.11
    , deepseq           >= 1.4
    , ergo-protocol     >= 0.1 && < 0.2
    , socket-manager    >= 0.1
    , stm               >= 2.4
    , text              >= 1.2
    , time              >= 1.6
    , vector            >= 0.12
    , base16-bytestring
  default-extensions:
    CPP
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

executable ergo-protocol-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O3
  -- ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -A64m -AL256m -qn4"
  build-depends:
      base
    , ergo-protocol
    , ergo-protocol-client
    , cryptonite
    , memory
    , optparse-generic  >= 1.3      && < 1.4
    , sqlite-simple
    , stm
    , bytestring
    , text
    , time
    , persist
    , vector
    , base16-bytestring
    , groom
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
