name:                ergo-protocol
version:             0.1.0.0
synopsis:            Data types used in P2P protocol of Ergo platform.
description:         See README.md
category:            Data
build-type:          Simple
cabal-version:       >=2.0
license:             MIT
license-file:        LICENSE
copyright:           2020 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan, Sergey Ivanov
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Ergo.Protocol
    Data.Ergo.Protocol.Check
    Data.Ergo.Protocol.Decoder
    Data.Ergo.Protocol.Encoder
    Data.Ergo.Protocol.Shift
    Data.Ergo.Protocol.Types
    Data.Ergo.Protocol.Vlq
    Data.Ergo.Protocol.ZigZag
  default-language:    Haskell2010
  build-depends:
      base              >= 4.7 && < 4.13
    , base16-bytestring >= 0.1
    , bytestring        >= 0.9 && < 0.11
    , cryptonite        >= 0.25
    , deepseq           >= 1.4
    , memory            >= 0.14
    , persist           >= 0.1
    , text              >= 1.2
    , vector            >= 0.12
  default-extensions:
    BangPatterns
    CPP
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FunctionalDependencies
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell

test-suite ergo-protocol-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Data.Ergo.ProtocolTest
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
  build-depends:
      base
    , base16-bytestring
    , bytestring
    , ergo-protocol
    , persist
    , quickcheck-instances
    , quickcheck-text
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-quickcheck
    , text
    , vector
