name:                ergo-protocol
version:             0.1.0.0
synopsis:            Data types used in P2P protocol of Ergo platform.
description:         See README.md
category:            Data
build-type:          Simple
cabal-version:       >=2.0
license:             MIT
license-file:        LICENSE
copyright:           2020 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan, Sergey Ivanov
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Ergo.Autolykos
    Data.Ergo.BigInt
    Data.Ergo.Block
    Data.Ergo.Crypto
    Data.Ergo.Difficulty
    Data.Ergo.Modifier
    Data.Ergo.Protocol
    Data.Ergo.Protocol.Check
    Data.Ergo.Protocol.Decoder
    Data.Ergo.Protocol.Encoder
    Data.Ergo.Protocol.Types
    Data.Ergo.Shift
    Data.Ergo.Vlq
    Data.Ergo.ZigZag
  default-language:    Haskell2010
  build-depends:
      base              >= 4.7 && < 4.13
    , base16-bytestring >= 0.1
    , bytestring        >= 0.9 && < 0.11
    , cryptonite        >= 0.25
    , deepseq           >= 1.4
    , hashable          >= 1.2
    , memory            >= 0.14
    , persist           >= 0.1
    , secp256k1-haskell >= 0.2
    , text              >= 1.2
    , time              >= 1.8
    , vector            >= 0.12
  default-extensions:
    BangPatterns
    CPP
    DeriveGeneric
    FlexibleContexts
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell

test-suite ergo-protocol-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Driver.hs
  hs-source-dirs:      test
  other-modules:
      Data.Ergo.BigIntTest
      Data.Ergo.BlockTest
      Data.Ergo.Block2Test
      Data.Ergo.DifficultyTest
      Data.Ergo.ProtocolTest
      Data.Ergo.VarIntTest
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    NumDecimals
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
  build-depends:
      base
    , base16-bytestring
    , bytestring
    , ergo-protocol
    , persist
    , quickcheck-instances
    , quickcheck-text
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
    , vector
